--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,14 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.0.1</version>
-            <scope>test</scope>
+            <version>RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.9.13.6</version>
+            <version>RELEASE</version>
         </dependency>
-
-
     </dependencies>
-
 
 </project>
