--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,67 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# Folder config file
-Desktop.ini
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# Generated files
+.idea/**/contentModel.xml
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
-# Windows shortcuts
-*.lnk
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
 
-# =========================
-# Operating System Files
-# =========================
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
 
-# OSX
-# =========================
+# CMake
+cmake-build-*/
 
-.DS_Store
-.AppleDouble
-.LSOverride
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
 
-# Thumbnails
-._*
+# File-based project format
+*.iws
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
+# IntelliJ
+out/
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Editor-based Rest Client
+.idea/httpRequests
+
+# Android studio 3.1+ serialized cache file
